Change the result background color

--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -1,5 +1,9 @@
 .grayColor {
-  background-color: #c9c9c9;
+  background-color: #e2e2e2;
+}
+
+.darkGray {
+  background-color: #999;
 }
 
 .orangeColor {
