--- a/src/styles/quotes.css
+++ b/src/styles/quotes.css
@@ -1,4 +1,13 @@
 .quote {
-  font-size: 1em;
-  color: darkorange;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.5em;
+  color: #212529;
+  padding: 150px 110px;
+  text-align: center;
+}
+
+.quote .author {
+  font-size: 16px;
 }
