--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,14 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  background-image:
+    linear-gradient(
+      to right,
+      #2c3039bd,
+      #6b3638bd,
+      #fe6b3abd
+    ),
+    url(./images/bg-image.jpg);
+  background-size: contain;
+  color: #fedbd1;
 }
