Add test to my app

--- a/src/styles/quotes.css
+++ b/src/styles/quotes.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   font-size: 1.5em;
-  color: #212529;
+  color: #ffc6b6;
   padding: 150px 110px;
   text-align: center;
 }
